[gd_scene load_steps=6 format=3 uid="uid://dya1j6bhhjnj0"]

[ext_resource type="Script" path="res://scenes/instantiables/selection_hint.gd" id="1_55sfr"]
[ext_resource type="Texture2D" uid="uid://cy4r1jb3ircnl" path="res://assets/textures/selection_hint_corner.png" id="1_yenb6"]

[sub_resource type="Animation" id="Animation_eejv1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLeft:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopRight:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomLeft:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 24)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomRight:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(56, 24)]
}

[sub_resource type="Animation" id="Animation_li5mv"]
resource_name = "default"
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TopLeft:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TopRight:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, 1), Vector2(-1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("BottomLeft:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, -1), Vector2(1, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BottomRight:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-1, -1), Vector2(-1, -1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t36ok"]
_data = {
"RESET": SubResource("Animation_eejv1"),
"default": SubResource("Animation_li5mv")
}

[node name="SelectionHint" type="Node2D"]
top_level = true
script = ExtResource("1_55sfr")

[node name="TopLeft" type="Sprite2D" parent="."]
texture = ExtResource("1_yenb6")
centered = false

[node name="TopRight" type="Sprite2D" parent="."]
texture = ExtResource("1_yenb6")
centered = false
offset = Vector2(56, 0)
flip_h = true

[node name="BottomLeft" type="Sprite2D" parent="."]
texture = ExtResource("1_yenb6")
centered = false
offset = Vector2(0, 24)
flip_v = true

[node name="BottomRight" type="Sprite2D" parent="."]
texture = ExtResource("1_yenb6")
centered = false
offset = Vector2(56, 24)
flip_h = true
flip_v = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_t36ok")
}
autoplay = "default"
